MH-4841 re-refined CSS in order to avoid the ugly scrollbars in AdminUI
git-svn-id: https://opencast.jira.com/svn/MH/trunk@8251 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -237,6 +237,7 @@ select { font-size:1.15em; }
 #add-buttons-container {
     float:right;
     margin:10px 0;
+    overflow: hidden;
 }
 
 #recordings-table-container {
